[package]
name = "desktop"
version = "0.1.0"
authors = ["Owen Campbell <ocampbell95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.6.0"
flower_box = { path = "../flower_box" }
bindings = { package = "windows_bindings", path = "bindings" }
directx_math = "0.2.1"

[build-dependencies]
windows = "0.6.0"
